<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name "TOWAMWMS">
    ]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="app_copyright">Globalsion Software Sdn. Bhd.</string>
    <string name="logo_globalsion">Globalsion Logo</string>

    <string name="text_login">Login</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_submit">Submit</string>
    <string name="text_ok">OK</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_authenticating">Authenticating&#8230;</string>
    <string name="text_cancelling">Cancelling&#8230;</string>
    <string name="text_retrieving_data">Retrieving data&#8230;</string>
    <string name="text_receiving">Receiving</string>
    <string name="text_transferring">Transferring</string>
    <string name="text_final_barcode_printing">Final Barcode Printing</string>
    <string name="text_picking">Picking</string>
    <string name="text_issuing">Issuing</string>
    <string name="text_part_enquiry">Part Enquiry</string>
    <string name="text_main_menu"><b>Main Menu</b></string>
    <string name="text_process">Process</string>
    <string name="text_process_underlined"><u>Process</u></string>
    <string name="text_transaction">Transaction</string>
    <string name="text_transaction_underlined"><u>Transaction</u></string>
    <string name="text_others">Others</string>
    <string name="text_others_underlined"><u>Others</u></string>
    <string name="text_settings">Settings</string>
    <string name="text_logout">Logout</string>
    <string name="text_options">Options</string>
    <string name="text_user_display"><b>User:</b> %1$s</string>
    <string name="text_save">Save</string>
    <string name="text_search">Search</string>
    <string name="text_scan">Scan</string>
    <string name="text_view_current_record">View saved record</string>
    <string name="text_new_record">New record</string>
    <string name="text_back_to_menu">Back to menu</string>
    <string name="text_edit">Edit</string>
    <string name="text_dismiss">Dismiss</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_receiving_no">Receiving No</string>
    <string name="hint_receiving_date">Receiving Date</string>
    <string name="hint_part_barcode">Part Barcode</string>
    <string name="hint_item">Item</string>
    <string name="hint_treatment">Treatment</string>
    <string name="hint_mfg_no">Mfg No.</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_bin">Bin</string>
    <string name="hint_bin_group">Bin Group</string>
    <string name="hint_bin_type">Bin Type</string>
    <string name="hint_part">Part</string>
    <string name="hint_transferring_no">Transferring No</string>
    <string name="hint_transferring_date">Transferring Date</string>
    <string name="hint_transferring_type">Transferring Type</string>
    <string name="hint_picking_no">Picking No</string>
    <string name="hint_picking_date">Picking Date</string>
    <string name="hint_issuing_no">Issuing No</string>
    <string name="hint_issuing_date">Issuing Date</string>
    <string name="hint_employee_id">Employee Id</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_type">Type</string>
    <string name="hint_item_code">Item Code</string>
    <string name="hint_destination_bin_code">Destination Bin Code</string>
    <string name="hint_destination_bin_group">Destination Bin Group</string>
    <string name="hint_destination_bin_type">Destination Bin Type</string>
    <string name="hint_line_of_items">Line of Items</string>
    <string name="hint_seq">Sequence</string>
    <string name="hint_status">Status</string>

    <string name="message_authentication_failed">Invalid username or password.</string>
    <string name="message_user_qr_fail">Invalid user QR Code.</string>
    <string name="message_exit_application">Are you sure you want to exit application?</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="message_save_confirmation">Are you sure you want to save current record?</string>
    <string name="message_cancel_confirmation">Are you sure you want to discard current record?</string>
    <string name="message_part_barcode_doesnt_exists">Part barcode doesn\'t exists.</string>
    <string name="message_picklist_doesnt_exists">Picklist doesn\'t exists.</string>
    <string name="message_employee_id_doesnt_exists">Employee id doesn\'t exists.</string>
    <string name="message_part_already_received">Part already received.</string>
    <string name="message_part_not_received">Part is not received.</string>
    <string name="message_bin_pallet_doesnt_exists">Bin / pallet doesn\'t exists</string>
    <string name="message_invalid_pallet">Invalid pallet code</string>
    <string name="message_invalid_bin_pallet">Invalid bin / pallet code.</string>
    <string name="message_invalid_destination_bin_pallet">Invalid dest. bin / pallet code.</string>
    <string name="message_bin_group_only_staging_or_quality_control">Bin group not valid, only \'Staging\' and \'Quality Control\' are allowed.</string>
    <string name="message_loading_part">Loading part…</string>
    <string name="message_loading_bin_pallet">Loading bin / pallet…</string>
    <string name="message_loading_pallet">Loading pallet…</string>
    <string name="message_loading_picklist">Loading picklist…</string>
    <string name="message_loading_picklist_details">Loading picklist details…</string>
    <string name="message_loading_user_sign">Loading user sign…</string>
    <string name="message_loading_destination_bin_pallet">Loading dest. bin / pallet…</string>
    <string name="message_printing">Printing…</string>
    <string name="message_picklist_empty_picked">Picklist \'%1$s\' has no picked item(s).</string>

    <string name="message_logged_in">Login successful, welcome \'%1$s\'.</string>
    <string name="message_please_setup_root_url">Please setup your server address.</string>
    <string name="message_invalid_rest_url">Invalid server address.</string>
    <string name="message_invalid_rest_url_2">Invalid server address, make sure you included \'http\' or \'https\' in your input.</string>
    <string name="message_please_cancel_login">Please cancel the current login process to continue.</string>
    <string name="message_saving">Saving…</string>
    <string name="message_not_authorized_to_insert">You are not authorized to perform add record to this module.</string>
    <string name="message_not_connected_to_the_internet">You are not connected to the internet.</string>
    <string name="message_please_input_part_barcode">Please input part barcode.</string>
    <string name="message_please_input_employee_id">Please input employee id.</string>
    <string name="message_please_input_bin">Please input bin.</string>
    <string name="message_please_input_barcode">Please input barcode.</string>
    <string name="message_please_input_destination_bin_code">Please input destination bin code.</string>
    <string name="message_please_login">Please login to continue.</string>
    <string name="message_please_input_username">Please input username.</string>
    <string name="message_please_input_password">Please input password.</string>
    <string name="message_system_error">System error.</string>
    <string name="message_please_input_required_fields">Please input required fields.</string>
    <string name="message_receiving_saved">Receiving \'%1$s\' saved.</string>
    <string name="message_transferring_saved">Transferring \'%1$s\' saved.</string>
    <string name="message_picking_saved">Picking \'%1$s\' saved.</string>
    <string name="message_picking_saved_multiple">One or more picking(s) saved.</string>
    <string name="message_issuing_saved">Issuing \'%1$s\' saved.</string>
    <string name="message_quality_control_required">Quality control required.</string>
    <string name="message_print_triggered_successfully">Print triggered successfully.</string>
    <string name="message_please_setup_printer_name">Please setup your printer name.</string>
    <string name="message_picklist_loaded">Picklist loaded.</string>
    <string name="message_please_scan_user_qr">Please scan user QR code.</string>

    <string name="title_scan_barcode">Scan Barcode</string>
    <string name="title_validation">Validation</string>
    <string name="title_save_confirmation">Save Confirmation</string>
    <string name="title_cancel_confirmation">Cancel Confirmation</string>
    <string name="title_logout">Logout</string>
    <string name="title_authentication_failed">Authentication Failed</string>
    <string name="title_exit_application">Exit Application</string>
    <string name="title_error">Error</string>
    <string name="title_login">Login</string>
    <string name="title_settings">Settings</string>
    <string name="title_system_settings">System Settings</string>
    <string name="title_developer_settings">Developer Settings</string>
    <string name="title_server_address">Server Address</string>
    <string name="title_api_packet_compression">API Packet Compression</string>
    <string name="title_api_packet_log_compression_rate">API Packet Log Compression Rate</string>
    <string name="title_api_packet_log_raw_json">API Packet Log Raw JSON</string>
    <string name="title_receiving">Receiving</string>
    <string name="title_transferring">Transferring</string>
    <string name="title_final_barcode_printing">Final Barcode Printing</string>
    <string name="title_picking">Picking</string>
    <string name="title_issuing">Issuing</string>
    <string name="title_warning">Warning</string>
    <string name="title_picklist_details">Picklist Details</string>
    <string name="title_notification">Notification</string>
    <string name="title_printer_name">Printer Name</string>
    <string name="title_user_sign">User Sign</string>

    <string name="summary_server_address">Please input server address.</string>
    <string name="summary_printer_name">Please input printer name.</string>
    <string name="summary_enabled">Enabled</string>
    <string name="summary_disabled">Disabled</string>
</resources>
