<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.globalsion.utils.DateUtil" />

        <variable
            name="viewModel"
            type="com.towamwms.viewmodels.IssuingActivityVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <!-- Use paddingBottom 100dp if using FAB -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <android.support.design.widget.TextInputLayout style="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.TextInputEditText.Disabled"
                    android:hint="@string/hint_issuing_no"
                    android:text="@{viewModel.issuing.documentNo}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.TextInputEditText.Disabled"
                    android:hint="@string/hint_issuing_date"
                    android:text="@{DateUtil.format(`dd/MM/yyyy`, viewModel.issuing.documentDate)}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.TextInputEditText.Disabled"
                    android:hint="@string/hint_mfg_no"
                    android:text="@{viewModel.issuing.mfgNo}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_part_barcode"
                    style="@style/AppTheme.TextInputEditText"
                    android:hint="@string/hint_part_barcode"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.partBarcode}"
                    app:onEditorAction="@{viewModel}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.TextInputEditText.Disabled"
                    android:hint="@string/hint_line_of_items"
                    android:text="@{viewModel.lineOfItems}" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</layout>
